--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="icon"
       type="image"
-      href="https://munchkin.game/site-munchkin/assets/files/1086/m_head_icon_white.jpg" />
+      href="/icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet" />
@@ -34,7 +34,7 @@
     <div class="flex-center">
       <button class="button" id="save-btn">Save!</button>
     </div>
-    <div class="flex-center">
+    <div class="ul flex-center">
       <ul class="p-normal" id="ul-el">
 
       </ul>
