--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link
-      rel="icon"
-      type="image"
-      href="/icon.png" />
+    <link rel="icon" type="image" href="/icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet" />
@@ -33,11 +30,12 @@
     </div>
     <div class="flex-center">
       <button class="button" id="save-btn">Save!</button>
+      <button class="button" id="tab-btn">Save Tab</button>
+      <button class="button" id="clear-btn">Clear</button>
     </div>
-    <div class="ul flex-center">
-      <ul class="p-normal" id="ul-el">
 
-      </ul>
+    <div class="ul flex-center">
+      <ul class="p-normal" id="ul-el"></ul>
     </div>
   </body>
   <script src="script.js"></script>
